@@ -8,12 +8,10 @@ module.exports = function (parent, constructor, proto) {
         constructor
     );
 
-    proto = proto ?
-        o_merge( {}, constructor.prototype, proto ) :
-        o_clone( constructor.prototype );
+    childProto = Object.create( parent.prototype );
+    if (proto) o_merge( childProto, proto );
 
-    proto.__proto__ = parent.prototype;
-    child.prototype = proto;
+    child.prototype = childProto;
 
     return child;
 };
