@@ -1,8 +1,8 @@
 var o_merge = require('./o-merge.js');
 
 module.exports = function (obj) {
-    var newObj = o_merge( {}, obj );
-    newObj.__proto__ = obj.__proto__;
+    var newObj = Object.create( Object.getPrototypeOf(obj) );
     newObj.constructor = obj.constructor;
+    o_merge( newObj, obj );
     return newObj;
 };
