@@ -2,6 +2,7 @@ DEVELOPMENT VERSION
  Global:
  - Using Grunt for build tools.
  - Lots of reworking of the build tools - much less room for human error.
+ - Removed all references to __proto__.
 
 0.0.9 : 2014-02-04
  Global:
